# collada-dom

./: .gitmodules  2016 - REQUIRED STEPS.txt  CMakeLists.txt  Readme.txt  Readme_for_PS3SDK.txt  Release_notes_2_4.txt  Release_notes_2_5_Beta.txt  collada-dom.pc.in  collada_dom-config-version.cmake.in  collada_dom-config.cmake.in  colladadom25.pc.in  colladadom25Config.cmake.in
dom/: CMakeLists.txt  Makefile  readme.txt
dom/codeGen/: 2016 Rewrite instructions.txt  gen.php
dom/codeGen/om/: base-types.php  object-model.php
dom/codeGen/src/: ElementMeta.php  SchemaParser.php  TypeMeta.php
dom/codeGen/tpl/: template-engine.php  tpl-ColladaDOM-3.php  tpl-class-h-def.php  tpl-class-h-inc.php  tpl-class-h.php  tpl-classes-cpp.php  tpl-constants-cpp.php  tpl-constants-h.php  tpl-elements-h.php  tpl-types-cpp.php  tpl-types-h.php
dom/external-libs/: readme.txt
dom/external-libs/tinyxml/: externals.txt
dom/include/: ColladaDOM.inl  DAEP.h  LINKAGE.HPP  WARNING.HPP  dae.h  dom.h
dom/include/3/COLLADA 1.4.1/: COLLADA notes.txt  COLLADA.h
dom/include/3/COLLADA 1.5.0/: COLLADA.h
dom/include/dae/: daeArray.h  daeAtlas.h  daeAtomicType.h  daeContent.h  daeDatabase.h  daeDocument.h  daeDomTypes.h  daeElement.h  daeError.h  daeErrorHandler.h  daeGCCPlatform.h  daeIDRef.h  daeIOPlugin.h  daeIOPluginCommon.h  daeMetaAttribute.h  daeMetaCMPolicy.h  daeMetaElement.h  daeMetaElementAttribute.h  daeMetaSchema.h  daePlatform.h  daePlatonic.h  daeRAII.hpp  daeRefCountedObj.h  daeRefResolver.h  daeSIDResolver.h  daeSmartRef.h  daeStandardURIResolver.h  daeStringRef.h  daeTypes.h  daeURI.h  daeWin32Platform.h  daeZAEUncompressHandler.h  domAny.h
dom/include/modules/: daeSTLDatabase.h
dom/projects/: 2016 - REQUIRED STEPS - PROJECTS.txt  NatvisFile.natvis  PS3 ColladaDOM diff.pseudo.xml  vc10-Win notes.txt
dom/projects/vc10-Win/: dom.vcxproj  dom.vcxproj.filters
dom/projects/vc8/: build.bat  dom-static.vcproj  dom.vcproj
dom/projects/vc8-PS3/: dom.vcproj
dom/src/: PCH.cpp
dom/src/1.4/: CMakeLists.txt
dom/src/1.4/dom/: domTypes.cpp
dom/src/1.5/: CMakeLists.txt
dom/src/1.5/dom/: domTypes.cpp
dom/src/dae/: dae.cpp  daeDocument.cpp  daeElement.cpp  daeError.cpp  daeIOPluginCommon.cpp  daeMetaElement.cpp  daeMetaElementAttribute.cpp  daeMetaSchema.cpp  daeSIDResolver.cpp  daeStringRef.cpp  daeTinyXMLPlugin.cpp  daeURI.cpp  daeUtils.cpp  daeZAEUncompressHandler.cpp  domAny.cpp
dom/src/modules/LIBXMLPlugin/: daeLIBXMLPlugin.cpp
dom/test/1.4/: domTest.cpp
dom/test/1.5/: domTest.cpp
fx/: CMakeLists.txt
fx/include/: FX.pch.h  cfxAnnotate.h  cfxData.h  cfxEffect.h  cfxLoader.h  cfxParam.h  cfxPass.h  cfxTypes.h
fx/projects/vc10-Win/: fx.vcxproj  fx.vcxproj.filters
fx/src/: CfxPCH.cpp  cfxAnnotate.cpp  cfxCOMMON.cpp  cfxData.cpp  cfxEffect.cpp  cfxLoader.cpp  cfxLoader08.cpp  cfxParam.cpp  cfxPass.cpp
rt/: CMakeLists.txt
rt/include/: CrtAnimation.h  CrtCamera.h  CrtController.h  CrtData.h  CrtEffect.h  CrtGeometry.h  CrtLight.h  CrtMatrix.h  CrtMemory.h  CrtNode.h  CrtPhysics.h  CrtRender.h  CrtScene.h  CrtScene08.hpp  CrtTexture.h  CrtTypes.h  RT.pch.h
rt/projects/vc10-Win/: rt.vcxproj  rt.vcxproj.filters
rt/src/: CrtAnimation.cpp  CrtCommonCg.cpp  CrtCommonGL.cpp  CrtController.cpp  CrtGeometry.cpp  CrtMatrix.cpp  CrtPCH.cpp  CrtPhysics.cpp  CrtRender.cpp  CrtScene.cpp  CrtSceneRead.cpp  CrtSceneRead08.cpp  CrtTargaLoader.cpp  CrtTexture.cpp
viewer/: CMakeLists.txt
viewer/projects/linux/: Linux_main.cpp
viewer/projects/vc10-Win/: Windows_main.cpp  Windows_wgl.inl  viewer.sln  viewer.vcxproj  viewer.vcxproj.filters
viewer/projects/vc8-PS3/: PS3_BrowserUI.cpp  PS3_BrowserUI.h  PS3_main.cpp
viewer/projects/xcode/: OSX_main.cpp
viewer/src/: viewer_GLUI.hpp  viewer_GLUT.hpp  viewer_HTTP.hpp  viewer_base.inl  viewer_base.lite.cpp  viewer_base.pch.cpp  viewer_base.pch.h
xmlns/http_www_collada_org_2005_11_COLLADASchema/: config.h
xmlns/http_www_collada_org_2008_03_COLLADASchema/: config.h
